--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>TODO</title>
 </head>
 <body>
@@ -10,8 +11,8 @@
     <input type="text" id="todoInput" placeholder="Add a new task">
     <button>Add task</button>
     <ul id="todoList">
-        <li>Eat</li>
-        <li>Sleep</li>
+        <li>Eat <button>Remove</button></li>
+        <li>Sleep <button>Remove</button></li>
     </ul>
     <script src="app.js"></script>
 </body>
